# sqlite-test

./: README.md  main.py  pyproject.toml
stock_ingestor/: stocks.db  stocks_old.db
stock_ingestor/config/: schema.json
stock_ingestor/reports/models/: linear_regression_next_day.pkl  linear_regression_next_day_AAPL.pkl  linear_regression_next_day_GOOGL.pkl  linear_regression_next_day_MSFT.pkl  linear_regression_next_day_metrics.json
stock_ingestor/reports/models/classification/: logistic_regression_next_day_AAPL.pkl  logistic_regression_next_day_GOOGL.pkl  logistic_regression_next_day_MSFT.pkl  logistic_regression_next_day_metrics.json
stock_ingestor/reports/models/neural_network_classification/: neural_network_classification_next_day_metrics.json  nn_classification_next_day_AAPL.keras  nn_classification_next_day_AAPL_scaler.pkl  nn_classification_next_day_GOOGL.keras  nn_classification_next_day_GOOGL_scaler.pkl  nn_classification_next_day_MSFT.keras  (+1 more)
stock_ingestor/sql/migrations/: 0001_init.sql  0002_indexes.sql  0003_features.sql  0004_features_extended.sql  0005_prices_constraints.sql  0006_features_enhancements.sql
stock_ingestor/sql/queries/: insert_features.sql  insert_prices.sql  select_prices.sql
stock_ingestor/src/: create_db.py  feature_engineering.py  inference.py  ingest_and_store.py  model_training_classification_next_day.py  model_training_neural_network_classification_next_day.py  model_training_neural_network_regression_next_day.py  model_training_regression_next_day.py  model_training_xgboost_regression_next_day.py  query_and_show.py  utils.py
(+9 files in other folders)
